--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jasmine": "^3.6.10",
     "html-webpack-plugin": "^5.3.1",
+    "jquery": "^3.6.0",
     "karma": "^6.3.2",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
